--- a/Rookie.CustomerSite/Views/Shared/_Layout.cshtml
+++ b/Rookie.CustomerSite/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Rookie.CustomerSite</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/StyleSheet.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Rookie.CustomerSite.styles.css" asp-append-version="true" />
 </head>
@@ -36,9 +37,102 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2022 - Rookie.CustomerSite - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+  
+    <footer class="footer-area footer-style-01 bg_color--6 footer">
+        <div class="im-call-to-action-area ptb--70 im-separator">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-8 col-xl-6 col-md-12 col-sm-12 col-12">
+                        <div class="inner">
+                            <h2 class="text-white mb--0">Enough Talk, Let's Build Something Together</h2>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-xl-4 offset-xl-2 col-md-12 col-sm-12 col-12">
+                        <div class="call-to-cation-tbn text-left text-lg-right mt_md--20 mt_sm--20">
+                            <a class="btn-default btn-large btn-border btn-opacity" href="#button">Read Out Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-wrapper ptb--70">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 col-sm-6 col-12">
+                        <div class="ft-text">
+                            <div class="logo">
+                                <a href="index.html">
+                                    <img src="assets/images/logo/logo-light.png" alt="Digital Agency">
+                                </a>
+                            </div>
+                            <p>Copyright © 2021 <a href="index.html">Imroz</a> React Template. Built with love in Bangladesh All
+                                rights reserved.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 col-xl-2 offset-xl-1 col-md-6 col-sm-6 col-12 mt_mobile--40">
+                        <div class="footer-link">
+                            <h4>Quick Link</h4>
+                            <ul class="ft-link">
+                                <li>
+                                    <a href="portfolio.html">Portfolio</a>
+                                </li>
+                                <li>
+                                    <a href="about.html">About</a>
+                                </li>
+                                <li>
+                                    <a href="blog.html">Our Blog</a>
+                                </li>
+                                <li>
+                                    <a href="team.html">Our Team</a>
+                                </li>
+                                <li>
+                                    <a href="contact.html">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 col-md-6 col-sm-6 col-12 mt_md--40 mt_sm--40">
+                        <div class="footer-link">
+                            <h4>Company</h4>
+                            <ul class="ft-link">
+                                <li>
+                                    <a href="portfolio.html">Portfolio</a>
+                                </li>
+                                <li>
+                                    <a href="about.html">About</a>
+                                </li>
+                                <li>
+                                    <a href="blog.html">Our Blog</a>
+                                </li>
+                                <li>
+                                    <a href="team.html">Our Team</a>
+                                </li>
+                                <li>
+                                    <a href="contact.html">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-12 mt_md--40 mt_sm--40">
+                        <div class="footer-link">
+                            <h4>Say Hello</h4>
+                            <ul class="ft-link">
+                                <li>Email: <a href="mailto:admin@example.com">admin@example.com</a></li>
+                                <li>Email: <a href="mailto:hr@example.com">hr@example.com</a></li>
+                                <li>Phone: <a href="mailto:hr@example.com">01957485123</a></li>
+                            </ul>
+                            <div class="social-share-inner mt--20">
+                                <ul class="social-share social-style--2 d-flex justify-content-start liststyle">
+                                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
